# rpi-pico-test

./: .gitignore  CMakeLists.txt
src/: main.c
